# ND_RemoteControl

./: CMakeLists.txt  CMakePresets.json  README.md
include/AudioNDSession/: CMakeLists.txt
include/AudioNDSession/include/: AudioNDSession.hpp
include/AudioNDSession/src/: AudioNDSession.cpp
include/D2DPresentation/: CMakeLists.txt
include/D2DPresentation/include/: D2DRenderer.hpp  D2DWindow.hpp  tstring.hpp
include/D2DPresentation/src/: D2DRenderer.cpp  D2DWindow.cpp
include/DesktopDuplication/: CMakeLists.txt
include/DesktopDuplication/include/: DesktopDuplication.hpp
include/DesktopDuplication/src/: DesktopDuplication.cpp
include/DirectXTex/: CMakeLists.txt
include/DirectXTex/lib/Release/: DirectXTex.lib  DirectXTex_Spectre.lib
include/InputNDSession/: CMakeLists.txt
include/InputNDSession/include/: InputNDSession.hpp
include/InputNDSession/src/: InputNDSession.cpp
include/LZ4/: CMakeLists.txt
include/LZ4/lib/: liblz4_static.lib
include/NDSession/: CMakeLists.txt
include/NDSession/include/: NDSession.hpp
include/NDSession/src/: NDSession.cpp
shaders/: 440_2BGRA.hlsl  BGRA2_440.hlsl
src/: CMakeLists.txt  main.cpp  main_service.cpp  service.cpp
